# finbound

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LATENCY_OPTIMIZATION_PLAN.md  LICENSE  MILESTONES.md  MILESTONES_2.0.md  PROJECT_INDEX.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  ROADMAP.md  milestone3.0.md  purposal.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
config/: mlflow.yaml
config/tasks/: f1_ground_truth.yaml  f2_retrieval.yaml  f3_explanation.yaml  f4_scenario.yaml
data/: finqa_sample.json
docs/: LATENCY_OPTIMIZATION.md  LAYER2_DESIGN.md  TECHNICAL_TEST_REPORT.md  index.md
examples/: finqa_sample.py  minimal_pipeline.py
experiments/: __init__.py  benchmark_latency.py  benchmark_real_data.py  eval_harness.py  run_experiments.py  run_failed_samples.py
experiments/F1_EXTRA_result/: failed_sample_ids.json  failed_samples_details.json
finbound/: __init__.py  core.py  types.py
scripts/: ab_test_parallel.py  create_updated_dataset.py  run_task_from_config.py  run_unified_pipeline.py  setup_data.sh  test_f1_updated_100.py  test_f1_updated_100_lowlatency.py  test_f1_updated_100_v8.py  test_failed_full.py  test_gpt4_failed_finbound.py  test_nano_multistep.py  test_new_architecture.py  test_pot_on_failures.py  test_replacement_samples.py  test_sign_errors.py
tests/: __init__.py  test_approval_gate.py  test_calculator.py  test_data_loaders.py  test_data_validators.py  test_finbound_retrieval.py  test_finqa_loader.py  test_grounding_checker.py  test_layer0_checks.py  test_layer1_guardrails.py  test_layer1_routing.py  test_layer2.py  test_layer2_stage_gate.py  test_metrics.py  test_numeric_checker.py  test_parallel_runner.py  test_prompt_builder.py  test_query_builder.py  test_reasoning_chain.py  test_reasoning_parser.py  test_sec_filings.py  test_task_config_loader.py  test_tasks_executor.py  test_tatqa_loader.py  test_verification_components.py
(+293 files in other folders)
